fix task alignment

--- a/src/components/Task.module.css
+++ b/src/components/Task.module.css
@@ -1,6 +1,6 @@
 .mainTask {
     display: flex;
-    align-items: start;
+    align-items: center;
     justify-content: space-between;
 
     border: 1px solid var(--gray-400);
